--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -66,11 +66,12 @@
             </div>
         </div>
     </div>
-	<!-- Edit Modal HTML -->
+	<!-- add Modal HTML -->
 	<div id="addEmployeeModal" class="modal fade">
 		<div class="modal-dialog">
 			<div class="modal-content">
-				<form>
+				<form method ="post" action="{% url 'add' %}">
+					{% csrf_token %}
 					<div class="modal-header">						
 						<h4 class="modal-title">Add Employee</h4>
 						<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
@@ -78,19 +79,19 @@
 					<div class="modal-body">					
 						<div class="form-group">
 							<label>Name</label>
-							<input type="text" class="form-control" required>
+							<input type="text" name="name" class="form-control" required>
 						</div>
 						<div class="form-group">
 							<label>Email</label>
-							<input type="email" class="form-control" required>
+							<input type="email" name="email" class="form-control" required>
 						</div>
 						<div class="form-group">
 							<label>Address</label>
-							<textarea class="form-control" required></textarea>
+							<textarea class="form-control" name="address" required></textarea>
 						</div>
 						<div class="form-group">
 							<label>Phone</label>
-							<input type="text" class="form-control" required>
+							<input type="text" class="form-control" name="phone" required>
 						</div>					
 					</div>
 					<div class="modal-footer">
